--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
             aws cloudformation deploy  --template-file infra/infra.yml --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}  --region us-east-1
 
 # Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+# See: https://circleci.com/docs/2.0/configuration-reference/#workflow
 workflows:
   firs-pipline-workflow:
     jobs:
