first cd deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,20 +5,41 @@ orbs:
   welcome: circleci/welcome-orb@0.4.1
 
 jobs:
-  infrastructure-creation:
-    docker:
-      - image: amazon/aws-cli
+  # infrastructure-creation:
+  #   docker:
+  #     - image: amazon/aws-cli
 
+  #   steps:
+  #     - checkout
+  #     - run:
+  #         name: Create Cloudformation Stack
+  #         command: |
+  #           aws cloudformation deploy  --template-file template.yml --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}  --region us-east-1
+
+  # Exercise: Config and Deployment
+  configure_infrastructure: 
+    docker:
+      - image: python/python:3.7-alpine3.11
     steps:
       - checkout
+      - add_ssh_keys:
+              # You can get this ID in the section where you registered the SSH Key
+              fingerprints: ["d1:d2:da:15:2d:f4:53:d1:21:67:9f:16:5f:7a:0d:b4"] 
       - run:
-          name: Create Cloudformation Stack
+          name: Install Ansible
           command: |
-            aws cloudformation deploy  --template-file infra/infra.yml --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}  --region us-east-1
+            # Install Ansible
+            apk add --update ansible
+      - run:
+          name: Run Playbook and Configure server
+          command: |
+            # Your command
+            ansible-playbook -i inventory main.yml
+
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflow
 workflows:
   firs-pipline-workflow:
     jobs:
-      - infrastructure-creation
+      - configure_infrastructure
