--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
           name: Run Playbook and Configure server
           command: |
             # Your command
-            sudo ansible-playbook -i inventory main.yml
+            ansible-playbook -i inventory main.yml
 
 
 # Invoke jobs via workflows
